[package]
name = "aoc_2023"
version = "0.1.0"
edition = "2021"
authors = ["Valentin Bersier <hi@beeb.li>"]

[dependencies]
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
itertools = "0.12"
nom = "7"
num = "0.4.1"
owo-colors = "3.5.0"
reqwest = { version = "0.11", default-features = false, features = [
    "blocking",
    "rustls-tls",
] }
