[package]
name = "aoc_2023"
version = "0.1.0"
edition = "2021"
authors = ["Valentin Bersier <hi@beeb.li>"]

[dependencies]
anyhow = "1"
approx = "0.5"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
colorous = "1"
itertools = "0.12"
nom = "7"
num = "0.4"
owo-colors = "3"
pathfinding = "4"
petgraph = "0.6"
ranges = "0.3"
reqwest = { version = "0.11", default-features = false, features = [
  "blocking",
  "rustls-tls",
] }
rustworkx-core = "0.13"
